--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,10 @@ img {
     text-align: center;
 }
 
+.greeting {
+    background-color: black;
+}
+
 @media (max-width: 768px) {
     body {
         background-size: 100%;
